# ChatBotMM

./: .dockerignore  .gitignore  Dockerfile  FAREADME.md  README.md  USAGE_FA.md  main.py  pyproject.toml  rag.py  requirements.txt
.github/workflows/: ci.yml
src/chatbot/: __init__.py  __main__.py  api.py  bootstrap.py  cli.py  commands.py  config.py  errors.py
src/chatbot/rag/: __init__.py  chunker.py  embeddings.py  extractive_qa.py  generative_qa.py  ingestion.py  llama_qa.py  pipeline.py  retriever.py  vectorstore.py
tests/: test_api.py  test_chunker.py  test_cli.py  test_config.py  test_generative_qa.py  test_pipeline.py
